force-app/main/default/objects/Cashflow__c/Cashflow__c.object-meta.xml
<CustomObject>
    <label>Cashflow</label>
    <nameField>
        <displayFormat>CF-{0000}</displayFormat>
        <label>Cashflow Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cashflows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>