force-app/main/default/objects/Cashflow__c/fields/BM_Comments_for_Cashflow__c.field-meta.xml
<CustomField>
    <fullName>BM_Comments_for_Cashflow__c</fullName>
    <label>BM Comments for Cashflow</label>
    <type>TextArea</type>
</CustomField>