force-app/main/default/objects/Cashflow__c/fields/HM_Score__c.field-meta.xml
<CustomField>
    <fullName>HM_Score__c</fullName>
    <label>HM Score</label>
    <length>4</length>
    <type>Text</type>
</CustomField>