force-app/main/default/objects/Cashflow__c/fields/Obligations__c.field-meta.xml
<CustomField>
    <fullName>Obligations__c</fullName>
    <label>Obligations</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>