force-app/main/default/objects/Cashflow__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <label>Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank Salary</fullName>
            </value>
            <value>
                <fullName>Cash Salary</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Housewife</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Abroad</fullName>
            </value>
            <value>
                <fullName>Shop Income</fullName>
            </value>
            <value>
                <fullName>Vehicle Based Income</fullName>
            </value>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Mason</fullName>
            </value>
            <value>
                <fullName>Plumber</fullName>
            </value>
            <value>
                <fullName>Electrician</fullName>
            </value>
            <value>
                <fullName>Food Based Income</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>