force-app/main/default/objects/Cashflow__c/fields/Seen__c.field-meta.xml
<CustomField>
    <fullName>Seen__c</fullName>
    <label>Seen?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>